--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # === Telegram Bot API (силовой бот) ===
 BOT_TOKEN=8226360976:AAGm0jeLtH3UikusTWbMzBlgeSHR0EQmL1Y
 
-# === Группа / супергруппа (общий chat id) где бот работает с рекордами ===
+# === Группа / супергруппа (общий chat id) ===
 GROUP_ID=-1002511221161
 TOPIC_SIL=5762
 
@@ -10,12 +10,20 @@ API_ID=21309518
 API_HASH=a3adb5b639768800cb1db4a59ff10281
 SESSION_NAME=forwarder
 
-# === Topic / thread куда forwarder пересылает посты (отдельный топик) ===
+# === Topic / thread куда forwarder пересылает посты ===
 TOPIC_FORWARD=5761
 
 # === Файлы ===
-RECORDS_FILE=records.json
 CHANNELS_FILE=channels.json
+STATS_FILE=stats.json
+RECORDS_FILE=records.json
 
-# Интервал авто-отчёта в днях
+# === Отчёты ===
 REPORT_INTERVAL_DAYS=14
+
+# === Админ ===
+ADMIN_ID=1038139325
+
+# === Веб-панель ===
+WEB_HOST=localhost
+WEB_PORT=9000
